images settled to crt position

--- a/public/index.html
+++ b/public/index.html
@@ -589,14 +589,14 @@ class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-5
           class="img-fluid company-logo"
         />
       </div>
-      <div class="col-lg-4 col-md-4 col-sm-6">
+      <div style="margin-top:0" class="col-lg-4 col-md-4 col-sm-6">
         <img
           src="img/bata.jpg"
           alt="Bata image"
           class="img-fluid company-logo"
         />
       </div>
-      <div class="col-lg-4 col-md-4 col-sm-6">
+      <div style="margin-top:0" class="col-lg-4 col-md-4 col-sm-6">
         <img
           src="img/KAPL-Logoooo.webp"
           alt="KAPL image"
@@ -610,7 +610,7 @@ class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-5
         <img
           src="img/surin.jpeg"
           alt="Surin image"
-          class="img-fluid company-logo"
+          class="img-fluid company-logo p-4"
         />
       </div>
       <div class="col-lg-4 col-md-4 col-sm-6">
@@ -620,7 +620,7 @@ class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-5
           class="img-fluid company-logo"
         />
       </div>
-      <div class="col-lg-4 col-md-4 col-sm-6">
+      <div style="margin-top:42px; margin-bottom:24px;" class="col-lg-4 col-md-4 col-sm-6">
         <img
           src="img/hul.svg"
           alt="Hindustan Unilever Limited"
@@ -637,7 +637,7 @@ class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-5
           class="img-fluid company-logo"
         />
       </div>
-      <div class="col-lg-4 col-md-4 col-sm-6">
+      <div style="margin-top: 0;" class="col-lg-4 col-md-4 col-sm-6">
         <img
           src="img/itc.svg"
           alt="ITC Limited image"
