changed fadein issue

--- a/public/index.html
+++ b/public/index.html
@@ -200,9 +200,9 @@ class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-5
               <a href="./about.html" class="dropdown-item">About Us</a>
               <a href="./feature.html" class="dropdown-item">Our Features</a>
               <a href="./project.html" class="dropdown-item">Our Projects</a>
-              <!-- <a href="./team.html" class="dropdown-item">Team Members</a>
+              <!-- <a href="./team.html" class="dropdown-item">Team Members</a> -->
 
-              <a href="./testimonial.html" class="dropdown-item">Testimonial</a> -->
+              <!-- <a href="./testimonial.html" class="dropdown-item">Testimonial</a> -->
             </div>
           </div>
           <a
@@ -303,7 +303,7 @@ class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-5
         </h2>
         <div class="container pt-5">
           <div class="row g-4">
-            <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+            <div class="col-lg-4 col-md-6 wow" data-wow-delay="0.1s">
               <div class="fact-item text-center bg-light h-100 p-5 pt-0">
                 <div class="fact-icon">
                   <img src="img/icons/icon-2.png" alt="Design Icon" />
@@ -316,7 +316,7 @@ class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-5
                 </p>
               </div>
             </div>
-            <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
+            <div class="col-lg-4 col-md-6 wow" data-wow-delay="0.3s">
               <div class="fact-item text-center bg-light h-100 p-5 pt-0">
                 <div class="fact-icon">
                   <img src="img/icons/icon-3.png" alt="Innovative Icon" />
@@ -329,7 +329,7 @@ class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-5
                 </p>
               </div>
             </div>
-            <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
+            <div class="col-lg-4 col-md-6 wow" data-wow-delay="0.5s">
               <div class="fact-item text-center bg-light h-100 p-5 pt-0">
                 <div class="fact-icon">
                   <img src="img/icons/icon-4.png" alt="Project management Icon" />
@@ -354,7 +354,7 @@ class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-5
     <div class="container-xxl py-5">
       <div style="padding-top: 100px" class="container">
         <div class="row g-5">
-          <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s">
+          <div class="col-lg-6 wow" data-wow-delay="0.1s">
             <div class="about-img">
               <img
                 class="img-fluid"
@@ -368,7 +368,7 @@ class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-5
               />
             </div>
           </div>
-          <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
+          <div class="col-lg-6 wow " data-wow-delay="0.5s">
             <h4 class="section-title">About Us</h4>
             <h1 class="display-5 mb-4">
               A Creative Architecture Agency For Your Dream Home
@@ -413,7 +413,7 @@ class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-5
     <div class="container-xxl py-5">
       <div style="padding-top: 100px" class="container">
         <div
-          class="text-center mx-auto mb-5 wow fadeInUp"
+          class="text-center mx-auto mb-5 wow"
           data-wow-delay="0.1s"
           style="max-width: 600px"
         >
@@ -424,7 +424,7 @@ class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-5
           </h1>
         </div>
         <div class="row g-4">
-          <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+          <div class="col-lg-4 col-md-6 wow " data-wow-delay="0.1s">
             <div
               class="service-item d-flex position-relative text-center h-100"
             >
@@ -440,7 +440,7 @@ class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-5
               </div>
             </div>
           </div>
-          <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
+          <div class="col-lg-4 col-md-6 wow" data-wow-delay="0.3s">
             <div
               class="service-item d-flex position-relative text-center h-100"
             >
@@ -456,7 +456,7 @@ class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-5
               </div>
             </div>
           </div>
-          <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
+          <div class="col-lg-4 col-md-6 wow " data-wow-delay="0.5s">
             <div
               class="service-item d-flex position-relative text-center h-100"
             >
@@ -471,7 +471,7 @@ class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-5
               </div>
             </div>
           </div>
-          <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+          <div class="col-lg-4 col-md-6 wow " data-wow-delay="0.1s">
             <div
               class="service-item d-flex position-relative text-center h-100"
             >
@@ -486,7 +486,7 @@ class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-5
               </div>
             </div>
           </div>
-          <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
+          <div class="col-lg-4 col-md-6 wow " data-wow-delay="0.3s">
             <div
               class="service-item d-flex position-relative text-center h-100"
             >
@@ -502,7 +502,7 @@ class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-5
               </div>
             </div>
           </div>
-          <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
+          <div class="col-lg-4 col-md-6 wow " data-wow-delay="0.5s">
             <div
               class="service-item d-flex position-relative text-center h-100"
             >
@@ -841,7 +841,7 @@ class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-5
                       type="text"
                       class="form-control datetimepicker-input"
                       name="date" 
-                      placeholder="Choose Date to contact you"
+                      placeholder="Choose Date"
                       data-target="#date"
                       data-toggle="datetimepicker"
                       style="height: 55px"
