minor changes made

--- a/public/about.html
+++ b/public/about.html
@@ -46,7 +46,8 @@
 </head>
 
 <body>
-  <div
+  
+  <!-- <div
   id="spinner"
   class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center"
   >
@@ -62,7 +63,7 @@
     style="max-width: 80%; max-height: 80%; object-fit: contain;"
   />
   </div>
-  <!-- Spinner End -->
+  Spinner End -->
 
 
     <!-- Topbar Start -->
@@ -161,7 +162,7 @@
                 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
                     <h4 class="section-title">About Us</h4>
                     <h1 class="display-5 mb-4">A Creative Architecture Agency For Your Dream Home</h1>
-                    <p>RMAC, a builders for turning your vision of the perfect home or cutting-edge office into a reality. Our expert team excels in innovative architecture and precise craftsmanship, ensuring exceptional results tailored to your specific needs.</p>
+                    <p>RMA, a builders for turning your vision of the perfect home or cutting-edge office into a reality. Our expert team excels in innovative architecture and precise craftsmanship, ensuring exceptional results tailored to your specific needs.</p>
                     <p class="mb-4">We place the highest priority on quality and meticulous attention to detail in every project. Your new space will not only be beautiful but also functional and built to last. Whether you're looking to build your dream home or design a state-of-the-art office, we’re here to create a space that reflects your personality and lifestyle.</p>
                     <div class="d-flex align-items-center mb-5">
                         <div class="d-flex flex-shrink-0 align-items-center justify-content-center border border-5 border-primary" style="width: 120px; height: 120px;">
