--- a/public/feature.html
+++ b/public/feature.html
@@ -67,7 +67,8 @@
 </head>
 
 <body>
-  <div
+
+  <!-- <div
   id="spinner"
   class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center"
   >
@@ -83,7 +84,7 @@
     style="max-width: 80%; max-height: 80%; object-fit: contain;"
   />
   </div>
-  <!-- Spinner End -->
+  Spinner End -->
 
     <!-- Topbar Start -->
     <div class="container-fluid bg-dark p-0 wow fadeIn" data-wow-delay="0.1s">
