--- a/public/index.html
+++ b/public/index.html
@@ -57,7 +57,7 @@
     </script>
 
     <link rel="apple-touch-icon" sizes="180x180" href="./img/favicons/apple-touch-icon.png">
-    <link rel="icon" type="image/x-icon" href="./img/favicons/favicon.ico">
+    <link rel="icon" type="image/jpg" href="./img/favicons/favicon1.jpg">
     <link rel="icon" type="image/png" sizes="32x32" href="./img/favicons/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="./img/favicons/favicon-16x16.png">
     
@@ -115,7 +115,7 @@ class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-5
   class="position-absolute top-50 start-50 translate-middle"
   src="./img/logoo.jpg"
   alt="RMA Contractors Company Logo"
-  style="max-width: 80%; max-height: 80%; object-fit: contain;"
+  style="max-width: 50%; max-height: 50%; object-fit: contain;"
 />
 </div>
 <!-- Spinner End -->
@@ -841,7 +841,7 @@ class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-5
                       type="text"
                       class="form-control datetimepicker-input"
                       name="date" 
-                      placeholder="Choose Date"
+                      placeholder="Date of Appointment"
                       data-target="#date"
                       data-toggle="datetimepicker"
                       style="height: 55px"
@@ -911,12 +911,12 @@ class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-5
           class="owl-carousel testimonial-carousel wow fadeInUp"
           data-wow-delay="0.1s"
         >
-        <div class="testimonial-item text-center" data-dot="<img class='img-fluid' src='img/modern.jpg' alt='Client 1 image'>">
+        <div class="testimonial-item text-center" data-dot="<img class='img-fluid' src='img/dynamite.png' alt='Client 1 image'>">
           <p class="fs-5">
             "RMA Contractors exceeded all expectations during the construction of our new office complex. Their attention to detail, commitment to safety, and adherence to timelines made them an invaluable partner. We are thrilled with the final result and the professionalism displayed by their team."
           </p>
       </div>
-      <div class="testimonial-item text-center" data-dot="<img class='img-fluid' src='./img/hal.jpg' alt='Client 2 Image'>">
+      <div class="testimonial-item text-center" data-dot="<img class='img-fluid' src='./img/Hul logo...jpg' alt='Client 2 Image'>">
           <p class="fs-5">
               "Partnering with RMA Contractors for our factory expansion was a game-changer. Their expertise in managing large-scale projects and delivering top-notch quality on schedule impressed us beyond words. They truly set the standard for industrial construction."
           </p>
