--- a/public/project.html
+++ b/public/project.html
@@ -46,7 +46,7 @@
 
 <body>
     <!-- Spinner Start -->
-<div
+<!-- <div
 id="spinner"
 class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center"
 >
@@ -62,7 +62,7 @@ class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-5
   style="max-width: 80%; max-height: 80%; object-fit: contain;"
 />
 </div>
-<!-- Spinner End -->
+Spinner End -->
 
 
     <!-- Topbar Start -->
