--- a/public/appointment.html
+++ b/public/appointment.html
@@ -74,7 +74,8 @@
 </head>
 
 <body>
-  <div
+
+  <!-- <div
   id="spinner"
   class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center"
   >
@@ -90,7 +91,7 @@
     style="max-width: 80%; max-height: 80%; object-fit: contain;"
   />
   </div>
-  <!-- Spinner End -->
+  Spinner End -->
  <!-- Spinner End -->
 
 
@@ -242,7 +243,7 @@
                                   type="text"
                                   class="form-control datetimepicker-input"
                                   name="date" 
-                                  placeholder="Choose Date"
+                                  placeholder="Date of Appointment"
                                   data-target="#date"
                                   data-toggle="datetimepicker"
                                   style="height: 55px"
