--- a/public/contact.html
+++ b/public/contact.html
@@ -68,7 +68,8 @@
 </head>
 
 <body>
-    <div
+
+    <!-- <div
 id="spinner"
 class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center"
 >
@@ -84,7 +85,7 @@ class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-5
   style="max-width: 80%; max-height: 80%; object-fit: contain;"
 />
 </div>
-<!-- Spinner End -->
+Spinner End -->
 
 
     <!-- Topbar Start -->
