--- a/public/about.html
+++ b/public/about.html
@@ -22,7 +22,7 @@
 
 
      <!-- Favicon -->
-     <link rel="icon" type="image/png" href="./img/logoo.jpg" />
+     <link rel="icon" type="image/png" href="./img/favicons/logo 2 (1).png">
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
