--- a/public/terms.html
+++ b/public/terms.html
@@ -18,7 +18,7 @@
     />
 
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="./img/logoo.jpg" />
+    <link rel="icon" type="image/png" href="./img/favicons/logo 2 (1).png">
 
     <!-- Open Graph / Social Media Meta Tags -->
     <meta
