--- a/public/index.html
+++ b/public/index.html
@@ -57,9 +57,9 @@
     </script>
 
     <link rel="apple-touch-icon" sizes="180x180" href="./img/favicons/apple-touch-icon.png">
-    <link rel="icon" type="image/jpg" href="./img/favicons/favicon1.jpg">
-    <link rel="icon" type="image/png" sizes="32x32" href="./img/favicons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="./img/favicons/favicon-16x16.png">
+    <link rel="icon" type="image/png" href="./img/favicons/logo 2 (1).png">
+    <!-- <link rel="icon" type="image/png" sizes="32x32" href="./img/favicons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./img/favicons/favicon-16x16.png"> -->
     
 <link rel="manifest" href="/site.webmanifest">
 
