--- a/public/index.html
+++ b/public/index.html
@@ -872,6 +872,11 @@ class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-5
                     required
                   ></textarea>
                 </div>
+                <!-- Honeypot Field -->
+    <div style="display: none;" aria-hidden="true">
+      <label for="extra_field">Do not fill this field</label>
+      <input type="text" id="extra_field" name="extra_field" tabindex="-1" autocomplete="off">
+  </div>
                 <div class="col-12">
                   <button class="btn btn-primary w-100 py-3" type="submit">
                     Book Appointment
